<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_post_topic"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.vote.votesystem.PostTopicActivity">

    <EditText
        android:id="@+id/topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/post_hint"
        android:inputType="textMultiLine"
        android:maxLength="@integer/int_topic_limit"
        android:lines="@integer/int_post_topic_lines" />

    <TextView
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/topic"
        android:layout_alignParentLeft="true" />


    <Button
        android:id="@+id/post"
        android:text="@string/button_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/post_button_marginRight"
        android:layout_marginTop="@dimen/post_button_marginTop"
        android:layout_below="@+id/msg"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
