<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/topNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/list_item_margin"
        android:layout_marginRight="@dimen/list_item_margin"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_below="@id/topNum"
        android:layout_marginLeft="@dimen/list_item_margin"
        android:layout_marginRight="@dimen/list_item_margin" />

    <Button
        android:text="@string/button_upvote"
        android:id="@+id/up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/content"
        android:layout_marginLeft="@dimen/list_item_margin"
         />

    <TextView
        android:id="@+id/upNum"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/list_item_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/up"
        android:layout_alignBottom="@+id/up"
        android:layout_toRightOf="@+id/up" />
    <Button
        android:id="@+id/down"
        android:text="@string/button_downvote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_item_margin"
        android:layout_alignParentBottom="true"
        android:layout_alignBaseline="@+id/up"
        android:layout_alignBottom="@+id/up"
        android:layout_toRightOf="@id/upNum"/>
    <TextView
        android:id="@+id/downNum"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/list_item_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/up"
        android:layout_alignBottom="@+id/up"
        android:layout_toEndOf="@+id/down" />

</RelativeLayout>